Added the functionality of never ending words and they scroll as user types but the cursor  is broken

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
-    "random-words": "^1.2.0"
+    "random-words": "^1.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "name": "ztype2",
   "version": "1.0.0",
   "main": "tailwind.config.js",
   "scripts": {
+    "build-css": "npx tailwindcss -i ./tailwind.css -o ./src/styles.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
